Bug 119321 - Wrong character "2 %n2" instead of "2/2" in Print dialog
Summary: Wrong character "2 %n2" instead of "2/2" in Print dialog
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
6.2.0.0.alpha0+
Hardware: All All
: medium minor
Assignee: Julien Nabet
URL:
Whiteboard: target:6.2.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2018-08-16 19:06 UTC by Regina Henschel
Modified: 2018-08-20 16:48 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot (1.44 KB, image/png)
2018-08-16 19:06 UTC, Regina Henschel
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Regina Henschel 2018-08-16 19:06:27 UTC
Created attachment 144242 [details]
Screenshot

The page number field below the preview has a wrong character in Print dialog. It shows e.g. "1 %n2" but it should be "1/2".
Comment 1 raal 2018-08-16 19:28:27 UTC
Confirm. LO 6.2, windows.
Comment 2 Xisco Faulí 2018-08-17 07:21:39 UTC
Regression introduced by:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=cd66852f6dd08631a25d15a1527a647e69ab8ce3

author	Noel Grandin <noel.grandin@collabora.co.uk>	2018-08-07 10:34:54 +0200
committer	Noel Grandin <noel.grandin@collabora.co.uk>	2018-08-14 08:35:00 +0200
commit cd66852f6dd08631a25d15a1527a647e69ab8ce3 (patch)
tree 0ac1fab1d063046376e31e21d6656ee05eebb627
parent 095e1ca4372d90da7fc56051f1271ddd975a9e3a (diff)
create appendCopy method in OUStringBuffer
so we can avoid temporary copies when appending a substring of an
OUString to the buffer. I would have preferred to call the method just
"append" but that results in ambiguous method errors when the callsite
is something like
   sal_Int32 n;
   OUStringBuffer s;
   s.append(n, 10);
I'm not sure why

Bisected with: bibisect-linux64-6.2

Adding Cc: to Noel Grandin
Comment 3 Julien Nabet 2018-08-18 21:25:18 UTC
Patch submitted on gerrit:
https://gerrit.libreoffice.org/#/c/59303/
Comment 4 Commit Notification 2018-08-19 06:31:59 UTC
Julien Nabet committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=f61af646c5c3fe7e50aea01ede6a9d7ea53380f2

tdf#119321: fix appendCopy in searchAndReplace (printing)

It will be available in 6.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Xisco Faulí 2018-08-20 16:48:25 UTC
Verified in

Version: 6.2.0.0.alpha0+
Build ID: 401cba4c20fbc930f034168872642428d7459218
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: threaded

@Julien Nabet, Thanks for fixing this!!