tdf#119321: fix appendCopy in searchAndReplace (printing)

Regression from:
https://cgit.freedesktop.org/libreoffice/core/commit/?id=cd66852f6dd08631a25d15a1527a647e69ab8ce3

Change-Id: Iea4b21647dd01406271f9b3e13fea3cc73e1c801